// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp renders as expected 1`] = `
Array [
  <View
    accessibilityRole="tablist"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            null,
            null,
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              null,
            ],
          ]
        }
      >
        Sign In
      </Text>
    </View>
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "backgroundColor": "hsl(0, 0%, 100%)",
              "borderTopColor": "hsl(190, 95%, 30%)",
              "color": "hsl(190, 95%, 30%)",
            },
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              Object {
                "backgroundColor": "hsl(0, 0%, 100%)",
                "borderTopColor": "hsl(190, 95%, 30%)",
                "color": "hsl(190, 95%, 30%)",
              },
            ],
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      accessibilityLabel="Confirm Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Confirm Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Confirm Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 44,
              "minWidth": 0,
            },
            undefined,
          ]
        }
      >
        <RNCPicker
          items={
            Array [
              Object {
                "label": "+1",
                "testID": undefined,
                "textColor": undefined,
                "value": "+1",
              },
              Object {
                "label": "+7",
                "testID": undefined,
                "textColor": undefined,
                "value": "+7",
              },
            ]
          }
          numberOfLines={1}
          onChange={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              Array [
                Object {
                  "height": 44,
                },
                undefined,
              ],
            ]
          }
          testID="RNPicker"
        />
      </View>
      <View
        accessibilityLabel="Phone"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          Phone
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 4,
              "borderWidth": 1,
              "flexDirection": "row",
              "padding": 8,
              "width": "100%",
            }
          }
        >
          <TextInput
            accessible={true}
            autoCapitalize="none"
            editable={true}
            keyboardType="phone-pad"
            onBlur={[Function]}
            onChangeText={[Function]}
            placeholder="Phone"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Create Account
    </Text>
  </View>,
]
`;

exports[`SignUp renders as expected when hideSignIn is true 1`] = `
Array [
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      accessibilityLabel="Confirm Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Confirm Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Confirm Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 44,
              "minWidth": 0,
            },
            undefined,
          ]
        }
      >
        <RNCPicker
          items={
            Array [
              Object {
                "label": "+1",
                "testID": undefined,
                "textColor": undefined,
                "value": "+1",
              },
              Object {
                "label": "+7",
                "testID": undefined,
                "textColor": undefined,
                "value": "+7",
              },
            ]
          }
          numberOfLines={1}
          onChange={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              Array [
                Object {
                  "height": 44,
                },
                undefined,
              ],
            ]
          }
          testID="RNPicker"
        />
      </View>
      <View
        accessibilityLabel="Phone"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          Phone
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 4,
              "borderWidth": 1,
              "flexDirection": "row",
              "padding": 8,
              "width": "100%",
            }
          }
        >
          <TextInput
            accessible={true}
            autoCapitalize="none"
            editable={true}
            keyboardType="phone-pad"
            onBlur={[Function]}
            onChangeText={[Function]}
            placeholder="Phone"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Create Account
    </Text>
  </View>,
]
`;

exports[`SignUp renders as expected when isPending is true 1`] = `
Array [
  <View
    accessibilityRole="tablist"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            null,
            null,
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              null,
            ],
          ]
        }
      >
        Sign In
      </Text>
    </View>
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "backgroundColor": "hsl(0, 0%, 100%)",
              "borderTopColor": "hsl(190, 95%, 30%)",
              "color": "hsl(190, 95%, 30%)",
            },
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              Object {
                "backgroundColor": "hsl(0, 0%, 100%)",
                "borderTopColor": "hsl(190, 95%, 30%)",
                "color": "hsl(190, 95%, 30%)",
              },
            ],
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "opacity": 0.6,
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "opacity": 0.6,
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      accessibilityLabel="Confirm Password"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "opacity": 0.6,
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Confirm Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={false}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Confirm Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 44,
              "minWidth": 0,
            },
            undefined,
          ]
        }
      >
        <RNCPicker
          items={
            Array [
              Object {
                "label": "+1",
                "testID": undefined,
                "textColor": undefined,
                "value": "+1",
              },
              Object {
                "label": "+7",
                "testID": undefined,
                "textColor": undefined,
                "value": "+7",
              },
            ]
          }
          numberOfLines={1}
          onChange={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              Array [
                Object {
                  "height": 44,
                },
                undefined,
              ],
            ]
          }
          testID="RNPicker"
        />
      </View>
      <View
        accessibilityLabel="Phone"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "opacity": 0.6,
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          Phone
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 4,
              "borderWidth": 1,
              "flexDirection": "row",
              "padding": 8,
              "width": "100%",
            }
          }
        >
          <TextInput
            accessible={true}
            autoCapitalize="none"
            editable={false}
            keyboardType="phone-pad"
            onBlur={[Function]}
            onChangeText={[Function]}
            placeholder="Phone"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Creating Account
    </Text>
  </View>,
]
`;

exports[`SignUp renders as expected with errors 1`] = `
Array [
  <View
    accessibilityRole="tablist"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            null,
            null,
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              null,
            ],
          ]
        }
      >
        Sign In
      </Text>
    </View>
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "backgroundColor": "hsl(0, 0%, 100%)",
              "borderTopColor": "hsl(190, 95%, 30%)",
              "color": "hsl(190, 95%, 30%)",
            },
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              Object {
                "backgroundColor": "hsl(0, 0%, 100%)",
                "borderTopColor": "hsl(190, 95%, 30%)",
                "color": "hsl(190, 95%, 30%)",
              },
            ],
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      accessibilityLabel="Confirm Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Confirm Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Confirm Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 44,
              "minWidth": 0,
            },
            undefined,
          ]
        }
      >
        <RNCPicker
          items={
            Array [
              Object {
                "label": "+1",
                "testID": undefined,
                "textColor": undefined,
                "value": "+1",
              },
              Object {
                "label": "+7",
                "testID": undefined,
                "textColor": undefined,
                "value": "+7",
              },
            ]
          }
          numberOfLines={1}
          onChange={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              Array [
                Object {
                  "height": 44,
                },
                undefined,
              ],
            ]
          }
          testID="RNPicker"
        />
      </View>
      <View
        accessibilityLabel="Phone"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          Phone
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 4,
              "borderWidth": 1,
              "flexDirection": "row",
              "padding": 8,
              "width": "100%",
            }
          }
        >
          <TextInput
            accessible={true}
            autoCapitalize="none"
            editable={true}
            keyboardType="phone-pad"
            onBlur={[Function]}
            onChangeText={[Function]}
            placeholder="Phone"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f5bcbc",
          "flexDirection": "row",
          "paddingHorizontal": 4,
          "paddingVertical": 16,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Image
      accessibilityRole="image"
      source={
        Object {
          "testUri": "../../../src/assets/icons/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 20,
          },
          Object {
            "margin": 4,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "paddingHorizontal": 4,
          },
          undefined,
        ]
      }
    >
      Something went wrong
    </Text>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Create Account
    </Text>
  </View>,
]
`;

exports[`SignUp renders as expected with social providers 1`] = `
Array [
  <View
    accessibilityRole="tablist"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
        Object {
          "marginBottom": 8,
        },
      ]
    }
  >
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            null,
            null,
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              null,
            ],
          ]
        }
      >
        Sign In
      </Text>
    </View>
    <View
      accessibilityRole="tab"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          null,
          Array [
            Object {
              "backgroundColor": "hsl(210, 5%, 94%)",
              "borderTopColor": "hsl(210, 5%, 87%)",
              "borderTopWidth": 2,
              "flexBasis": 0,
              "flexGrow": 1,
              "padding": 12,
            },
            Object {
              "opacity": 1,
            },
            Object {
              "backgroundColor": "hsl(0, 0%, 100%)",
              "borderTopColor": "hsl(190, 95%, 30%)",
              "color": "hsl(190, 95%, 30%)",
            },
            null,
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Array [
              Object {
                "color": "hsl(210, 25%, 25%)",
                "fontSize": 16,
                "fontWeight": "700",
              },
              undefined,
              Object {
                "backgroundColor": "hsl(0, 0%, 100%)",
                "borderTopColor": "hsl(190, 95%, 30%)",
                "color": "hsl(190, 95%, 30%)",
              },
            ],
          ]
        }
      >
        Create Account
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="header"
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Object {
          "fontSize": 24,
          "fontWeight": "300",
          "lineHeight": 36,
        },
        undefined,
      ]
    }
  />,
  <View>
    <View
      accessibilityLabel="Username"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Username
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Username"
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityLabel="Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      accessibilityLabel="Confirm Password"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "flex-start",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "400",
              "marginHorizontal": 4,
              "marginVertical": 2,
            },
            Object {
              "color": "hsl(210, 50%, 10%)",
            },
            undefined,
          ]
        }
      >
        Confirm Password
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderColor": "black",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "padding": 8,
            "width": "100%",
          }
        }
      >
        <TextInput
          accessible={true}
          autoCapitalize="none"
          editable={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Confirm Password"
          secureTextEntry={true}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 16,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              null,
              null,
            ]
          }
        >
          <Image
            accessibilityRole="image"
            source={
              Object {
                "testUri": "../../../src/assets/icons/visibilityOff.png",
              }
            }
            style={
              Array [
                Object {
                  "height": 16,
                  "resizeMode": "contain",
                  "tintColor": undefined,
                  "width": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          },
          Object {
            "fontSize": 16,
            "marginVertical": 4,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "height": 44,
              "minWidth": 0,
            },
            undefined,
          ]
        }
      >
        <RNCPicker
          items={
            Array [
              Object {
                "label": "+1",
                "testID": undefined,
                "textColor": undefined,
                "value": "+1",
              },
              Object {
                "label": "+7",
                "testID": undefined,
                "textColor": undefined,
                "value": "+7",
              },
            ]
          }
          numberOfLines={1}
          onChange={[Function]}
          selectedIndex={0}
          style={
            Array [
              Object {
                "height": 216,
              },
              Array [
                Object {
                  "height": 44,
                },
                undefined,
              ],
            ]
          }
          testID="RNPicker"
        />
      </View>
      <View
        accessibilityLabel="Phone"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            Array [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "400",
                "marginHorizontal": 4,
                "marginVertical": 2,
              },
              Object {
                "color": "hsl(210, 50%, 10%)",
              },
              undefined,
            ]
          }
        >
          Phone
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "black",
              "borderRadius": 4,
              "borderWidth": 1,
              "flexDirection": "row",
              "padding": 8,
              "width": "100%",
            }
          }
        >
          <TextInput
            accessible={true}
            autoCapitalize="none"
            editable={true}
            keyboardType="phone-pad"
            onBlur={[Function]}
            onChangeText={[Function]}
            placeholder="Phone"
            style={
              Array [
                Object {
                  "flexGrow": 1,
                  "fontSize": 16,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityRole="button"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        null,
        Object {
          "backgroundColor": "teal",
          "marginVertical": 8,
          "paddingVertical": 12,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
          Object {
            "color": "white",
            "fontSize": 16,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Create Account
    </Text>
  </View>,
]
`;
